--- a/ngGearSilo/src/app/components/footer/footer.component.html
+++ b/ngGearSilo/src/app/components/footer/footer.component.html
@@ -1,8 +1,8 @@
 <footer class="small text-center text-white-50">
   <div class="container">
-    <a href="#">Copyright &copy; Almond Teira 2019 </a>
+    <a href="#/about">Copyright &copy; Almond Teira 2019 </a>
   </div>
   <div class="container">
-    <a href="window.location=#/admin">Admin</a> <!-- This link setup refreshes the page as needed -->
+    <a href="#/admin">Admin</a> <!-- This link setup refreshes the page as needed -->
   </div>
 </footer>
