--- a/ngGearSilo/src/app/components/gear-list/gear-list.component.html
+++ b/ngGearSilo/src/app/components/gear-list/gear-list.component.html
@@ -155,11 +155,11 @@
                         <img style="max-width:100px; height: auto;" class="img-responsive" src="{{item.imageUrl}}">
                       </div>
                       <div class="col-xs-4">
-                        <h4 style="margin-top:  -5px;" class="product-name">
+                        <h4 style="margin-top:  -5px; text-decoration-line: none;" class="product-name">
                           <strong>{{item.name | titlecase }}</strong>
                         </h4>
-                        <h4><small>{{item.description | titlecase }}</small></h4>
-                        <h4 style="margin-top:  -10px;"><small>{{item.price | currency }}/ day</small></h4>
+                        <h4 style="text-decoration-line: none;"><small>{{item.description | titlecase }}</small></h4>
+                        <h4 style="margin-top:  -10px; text-decoration-line: none;"><small>{{item.price | currency }}/ day</small></h4>
                       </div>
                       <div class="col-xs-6">
                         <img class="pic" src="{{item.user.imageUrl}}">
