--- a/ngGearSilo/src/app/components/nav-bar/nav-bar.component.css
+++ b/ngGearSilo/src/app/components/nav-bar/nav-bar.component.css
@@ -16,6 +16,10 @@
 }
 
 .navbar {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif !important;
+   margin: 0px !important;
+   font-size: 20px !important;
+   font-stretch: 3px !important;
+   border-radius: 0 !important;
 
 }
