--- a/ngGearSilo/src/app/components/login/login.component.html
+++ b/ngGearSilo/src/app/components/login/login.component.html
@@ -1,4 +1,6 @@
-<div class="container-fluid jumbotron">
+<div class="container-fluid log-bg">
+  <br />
+  <br />
   <div class="container login-form-1">
     <div class="row">
       <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
@@ -66,4 +68,6 @@
       </div>
     </div>
   </div>
+  <br />
+  <br />
 </div>
