--- a/ngGearSilo/src/app/components/nav-bar/nav-bar.component.html
+++ b/ngGearSilo/src/app/components/nav-bar/nav-bar.component.html
@@ -8,14 +8,15 @@
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
       <a class="nav-item nav-link showHand" [routerLink]="['/home']">Home <span class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link showHand" [routerLink]="['/users']" *ngIf="userLogInCheck()">Profile <span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link showHand" [routerLink]="['/users']" *ngIf="userLogInCheck()">Profile <span
+          class="sr-only">(current)</span></a>
       <a class="nav-item nav-link showHand" onclick="window.location='#/gears'">Gear</a>
       <a class="nav-item nav-link showHand" [routerLink]="['/about']">About</a>
       <a class="nav-item nav-link showHand" [routerLink]="['/login']" *ngIf="!userLogInCheck()">Login</a>
       <a class="nav-item nav-link showHand" [routerLink]="['/register']" *ngIf="!userLogInCheck()">Create
         Account</a>
       <a class="nav-item nav-link showHand" (click)="logout()" *ngIf="userLogInCheck()">Logout</a>
+      <a class="nav-item nav-link showHand" [routerLink]="['/admin']" *ngIf="isAdmin">ADMIN PORTAL</a>
     </div>
   </div>
 </nav>
-
