--- a/ngGearSilo/src/app/components/login/login.component.html
+++ b/ngGearSilo/src/app/components/login/login.component.html
@@ -10,48 +10,23 @@
               <strong>Sign In</strong>
             </h4>
             <hr />
-            <form
-              #loginForm="ngForm"
-              ngNativeValidate
-              id="login-form"
-              class="text-center"
-            >
+            <form #loginForm="ngForm" ngNativeValidate id="login-form" class="text-center">
               <div class="login-form-main-message"></div>
               <div class="main-login-form">
                 <div class="login-group">
                   <div class="form-group">
-                    <label class="text-left" for="username"
-                      >Email
-                      <input
-                        type="email"
-                        class="form-control"
-                        id="username"
-                        name="username"
-                        placeholder="username is your email"
-                        ngModel
-                        required
-                    /></label>
+                    <label class="text-left" for="username">Email
+                      <input type="email" class="form-control" id="username" name="username"
+                        placeholder="username is your email" ngModel required /></label>
                   </div>
                   <div class="form-group">
-                    <label class="text-left" for="password"
-                      >Password
-                      <input
-                        type="password"
-                        class="form-control"
-                        id="password"
-                        name="password"
-                        placeholder="password"
-                        ngModel
-                        required
-                    /></label>
+                    <label class="text-left" for="password">Password
+                      <input type="password" class="form-control" id="password" name="password" placeholder="password"
+                        ngModel required /></label>
                   </div>
                 </div>
                 <hr />
-                <button
-                  type="submit"
-                  class="login-button btn btn-dark"
-                  (click)="login(loginForm)"
-                >
+                <button type="submit" class="login-button btn btn-dark" (click)="login(loginForm)">
                   Enter the Silo
                 </button>
               </div>
@@ -68,6 +43,21 @@
       </div>
     </div>
   </div>
+  <br />
+  <br />
+  <br />
+  <br />
+  <br />
+  <br />
+  <br />
+  <br />
+  <br />
+  <br />
+  <br />
+  <br />
+  <br />
+  <br />
+  <br />
   <br />
   <br />
 </div>
