centered register text

--- a/ngGearSilo/src/app/components/login/login.component.html
+++ b/ngGearSilo/src/app/components/login/login.component.html
@@ -39,7 +39,7 @@
               <br />
               <div class="etc-login-form">
                 <p>
-                  Not a user yet?
+                  Not a member yet?
                   <a [routerLink]="['/register']">Join our community.</a>
                 </p>
               </div>
