fixed modal refreshing on close

--- a/ngGearSilo/src/app/components/profile/profile.component.html
+++ b/ngGearSilo/src/app/components/profile/profile.component.html
@@ -511,7 +511,7 @@
                   </tbody>
                 </table>
                 <div style="float: left" class="modal-footer">
-                  <button type="button" class="btn btn-secondary" (click)="ngOnInit()"
+                  <button type="button" class="btn btn-secondary"
                     data-dismiss="modal">Close</button>
                 </div>
               </div>
@@ -590,7 +590,7 @@
                 </tbody>
               </table>
               <div style="float: left" class="modal-footer">
-                <button type="button" class="btn btn-secondary" (click)="ngOnInit()" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-secondary"  data-dismiss="modal">Close</button>
               </div>
             </div>
           </div>
