--- a/ngGearSilo/src/app/components/reservation/reservation.component.css
+++ b/ngGearSilo/src/app/components/reservation/reservation.component.css
@@ -1,8 +1,3 @@
-.container {
-  font-family: Arial, Helvetica, sans-serif;
-
-}
-
-.btn {
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+.red-text {
+  color: rgb(255, 0, 0);
 }
