--- a/ngGearSilo/src/app/components/gear-list/gear-list.component.css
+++ b/ngGearSilo/src/app/components/gear-list/gear-list.component.css
@@ -243,10 +243,9 @@ input[type="text"]:focus {
   padding-right: 3px;
   cursor: pointer;
   /* width: 40px !important; */
-
 }
 
-.nav-container{
+.nav-container {
   width: 110%;
 }
 
@@ -273,7 +272,8 @@ h4 {
 .slider {
   -webkit-appearance: none;
   width: 25%;
-  height: 25px;
+  height: 15px;
+  border-radius: 5px;
   margin-top: 105px;
   margin-left: 180px;
   background: #d3d3d3;
@@ -292,6 +292,7 @@ h4 {
   appearance: none;
   width: 25px;
   height: 25px;
+  border-radius: 50%;
   background: orange;
   cursor: pointer;
 }
@@ -299,7 +300,7 @@ h4 {
 .slider::-moz-range-thumb {
   width: 25px;
   height: 25px;
-  background: #4caf50;
+  background: orange;
   cursor: pointer;
 }
 
@@ -309,3 +310,20 @@ h4 {
   color: orange;
 }
 
+
+/* input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  border: none;
+  height: 32px;
+  width: 32px;
+  background: goldenrod;
+  background: url('http://iconizer.net/files/Duesseldorf/orig/star.png') no-repeat;
+  margin-top: -15px;
+  border-radius: 0 !important;
+}
+input[type=range]+.thumb {
+  background-color: #FF8A80 !important;
+}
+input[type=range]+.thumb.active{
+top: -35px !important;
+} */
