--- a/ngGearSilo/src/app/components/gear-list/gear-list.component.html
+++ b/ngGearSilo/src/app/components/gear-list/gear-list.component.html
@@ -33,7 +33,7 @@
                 <!-- <input class="slider" style="margin-left: 200px; margin-top: 75px" [(ngModel)]="searchDistance" placeholder="Distance"
                 min={{min}} max={{max}} name="searchDistance" (change)="searchByDistance(); selected=null" type="range"> -->
                 <input type="range" min="0" max="2000" step="5" name="searchDistance" [(ngModel)]="searchDistance"
-                  (change)="searchByDistance(); selected=null" class="slider" id="myRange" >
+                  (change)="searchByDistance(); selected=null" class="slider" id="myRange">
               </div>
             </div>
 
@@ -101,8 +101,9 @@
                         <h4 style="margin-top:-5px; text-decoration-line: none" class="product-name">
                           <strong style="text-decoration-line: none">{{item.name | titlecase }}</strong>
                         </h4>
-                        <h4 style="text-decoration-line: none;" ><small>{{item.description | titlecase }}</small></h4>
-                        <h4 style="margin-top:  -10px;text-decoration-line: none"><small>{{item.price | currency }}/ day</small></h4>
+                        <h4 style="text-decoration-line: none;"><small>{{item.description | titlecase }}</small></h4>
+                        <h4 style="margin-top:  -10px;text-decoration-line: none"><small>{{item.price | currency }}/
+                            day</small></h4>
                       </div>
                       <div class="col-xs-6">
                         <img class="pic" src="{{item.user.imageUrl}}">
@@ -228,11 +229,11 @@
 
                       <div class="btn-group" role="group" aria-label="Basic example">
                         <div class="btn-group" role="group" aria-label="Basic example">
-                          <button (click)="ngOnInit()" class="btn btn-dark my-2 my-sm-0">Back to the list</button>
+                          <button (click)="startReservation()" class="btn btn-dark my-2 my-sm-0">Make a
+                            Reservation</button>
                         </div>
                         <div class="btn-group" role="group" aria-label="Basic example">
-                          <button (click)="startReservation()" class="btn btn-warning my-2 my-sm-0">Make a
-                            Reservation</button>
+                          <button (click)="ngOnInit()" class="btn btn-warning my-2 my-sm-0">Back to the list</button>
                         </div>
                       </div>
                     </div>
