--- a/ngGearSilo/src/app/components/logout/logout.component.html
+++ b/ngGearSilo/src/app/components/logout/logout.component.html
@@ -2,5 +2,7 @@
   <div class="mx-auto" style="width: 20%;">
     <H1>Logout</H1>
   </div>
-  <button type="submit" class="btn btn-danger" (click)="logout()">Logout</button>
+  <button type="submit" class="btn btn-danger" (click)="logout()">
+    Logout
+  </button>
 </div>
