--- a/ngGearSilo/src/app/components/gear-list/gear-list.component.html
+++ b/ngGearSilo/src/app/components/gear-list/gear-list.component.html
@@ -1,16 +1,9 @@
 <script src="js/addons/rating.js"></script>
-<link
-  href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css"
-  rel="stylesheet"
-  id="bootstrap-css"
-/>
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 <!------ Include the above in your HEAD tag ---------->
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
-<link
-  rel="stylesheet"
-  href="https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css"
-/>
+<link rel="stylesheet" href="https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css" />
 <!------ Include the above in your HEAD tag ---------->
 
 <br />
@@ -22,88 +15,44 @@
         <!-- SEARCH BAR -->
         <form class="form-inline" ngNativeValidate>
           <div class="input-group-prepend">
-            <button
-              class="btn btn-outline-secondary"
-              style="margin: 5px"
-              type="submit"
-              (click)="search(); selected = null"
-            >
-              <span
-                style="margin: 2px"
-                class="glyphicon glyphicon-search"
-              ></span>
+            <button class="btn btn-outline-secondary" style="margin: 5px" type="submit"
+              (click)="search(); selected = null">
+              <span style="margin: 2px" class="glyphicon glyphicon-search"></span>
             </button>
           </div>
           <div>
-            <input
-              class="form-control"
-              type="text"
-              size="35"
-              placeholder="Search by Keyword"
-              aria-label="Search"
-              name="keyword"
-              [(ngModel)]="keyword"
-              minlength="1"
-              maxlength="100"
-            />
+            <input class="form-control" type="text" size="35" placeholder="Search by Keyword" aria-label="Search"
+              name="keyword" [(ngModel)]="keyword" minlength="1" maxlength="100" />
           </div>
 
           <!-- SLIDER -->
           <div>
             <div *ngIf="loggedInUser.enabled == true">
               <div class="distanceBar">
-                <label class="sliderLabel" placeholder="Distance"
-                  >{{ searchDistance }} miles</label
-                >
+                <label class="sliderLabel" placeholder="Distance">{{ searchDistance }} miles</label>
                 <!-- <input class="slider" style="margin-left: 200px; margin-top: 75px" [(ngModel)]="searchDistance" placeholder="Distance"
                 min={{min}} max={{max}} name="searchDistance" (change)="searchByDistance(); selected=null" type="range"> -->
-                <input
-                  type="range"
-                  min="0"
-                  max="2000"
-                  step="5"
-                  name="searchDistance"
-                  [(ngModel)]="searchDistance"
-                  (change)="searchByDistance(); selected = null"
-                  class="slider"
-                  id="myRange"
-                />
+                <input type="range" min="0" max="2000" step="5" name="searchDistance" [(ngModel)]="searchDistance"
+                  (change)="searchByDistance(); selected = null" class="slider" id="myRange" />
               </div>
             </div>
 
             <!-- RESET BUTTON -->
             <div>
-              <button
-                style="margin-left: 520px; margin-top: -45px"
-                class="btn btn-outline-secondary"
-                (click)="ngOnInit(); selectedType = 'All'"
-              >
-                <span
-                  style="margin: 2px"
-                  class="glyphicon glyphicon-th-list"
-                ></span>
+              <button style="margin-left: 520px; margin-top: -45px" class="btn btn-outline-secondary"
+                (click)="ngOnInit(); selectedType = 'All'">
+                <span style="margin: 2px" class="glyphicon glyphicon-th-list"></span>
                 See all Items
               </button>
             </div>
           </div>
         </form>
 
-<<<<<<< HEAD
-        <div style="margin-left: 280px;" class="nav-container" *ngIf="!selected">
-=======
-        <div
-          style="margin-left: 215px;"
-          class="nav-container"
-          *ngIf="!selected"
-        >
->>>>>>> 220214058aa9a991d115615e19425bda8102bb81
+        <div style="margin-left: 215px;" class="nav-container" *ngIf="!selected">
           <ul class="nav nav-tabs">
             <li class="active">
-              <button
-                class="showHand hover btn-primary btn-warning"
-                *ngFor="let category of categories"
-                (click)="selectedType = category"
-              >
+              <button class="showHand hover btn-primary btn-warning" *ngFor="let category of categories"
+                (click)="selectedType = category">
                 &nbsp;{{ category }}&nbsp;
               </button>
               <h4 *ngIf="selectedType !== 'All'">{{ selectedType }}</h4>
@@ -129,17 +78,9 @@
             <h4>{{ searchedGear.length }} Search Results Found</h4>
           </div>
           <div class="container" *ngFor="let item of searchedGear">
-            <div
-              (click)="displayGearItem(item)"
-              style="background-color: lightgrey;"
-              class="row"
-            >
+            <div (click)="displayGearItem(item)" style="background-color: lightgrey;" class="row">
               <div style="background-color: lightgrey;" class="col-xs-8">
-                <div
-                  style="background-color:white; margin: 3px"
-                  id="panels"
-                  class="panel panel"
-                >
+                <div style="background-color:white; margin: 3px" id="panels" class="panel panel">
                   <div class="panel-heading">
                     <div class="panel-title">
                       <div class="row">
@@ -159,17 +100,10 @@
                     <div class="panel-body">
                       <div class="row"></div>
                       <div class="col-xs-2">
-                        <img
-                          style="max-width:100px; height: auto;"
-                          class="img-responsive"
-                          src="{{ item.imageUrl }}"
-                        />
+                        <img style="max-width:100px; height: auto;" class="img-responsive" src="{{ item.imageUrl }}" />
                       </div>
                       <div style="text-decoration-line: none" class="col-xs-4">
-                        <h4
-                          style="margin-top:-5px; text-decoration-line: none"
-                          class="product-name"
-                        >
+                        <h4 style="margin-top:-5px; text-decoration-line: none" class="product-name">
                           <strong style="text-decoration-line: none">{{
                             item.name | titlecase
                           }}</strong>
@@ -177,9 +111,7 @@
                         <h4 style="text-decoration-line: none;">
                           <small>{{ item.description | titlecase }}</small>
                         </h4>
-                        <h4
-                          style="margin-top:  -10px;text-decoration-line: none"
-                        >
+                        <h4 style="margin-top:  -10px;text-decoration-line: none">
                           <small>{{ item.price | currency }}/ day</small>
                         </h4>
                       </div>
@@ -198,18 +130,9 @@
                               Lender Rating: {{ item.user.userLenderRating }}
                             </h6>
                           </div>
-                          <ngb-rating
-                            [(rate)]="item.user.userLenderRating"
-                            [readonly]="true"
-                            max="5"
-                          >
+                          <ngb-rating [(rate)]="item.user.userLenderRating" [readonly]="true" max="5">
                             <ng-template let-fill="fill" let-index="index">
-                              <span
-                                class="star"
-                                [class.filled]="fill === 100"
-                                [class.bad]="index < 0"
-                                >&#9733;</span
-                              >
+                              <span class="star" [class.filled]="fill === 100" [class.bad]="index < 0">&#9733;</span>
                             </ng-template>
                           </ngb-rating>
                         </div>
@@ -224,22 +147,10 @@
 
         <!-- CARDS -->
         <div *ngIf="!selected && hideSearchResult">
-          <div
-            class="container"
-            *ngFor="let item of gearList | gearCategory: selectedType"
-            (click)="selected = item"
-          >
-            <div
-              (click)="displayGearItem(item)"
-              style="background-color: lightgrey;"
-              class="row"
-            >
+          <div class="container" *ngFor="let item of gearList | gearCategory: selectedType" (click)="selected = item">
+            <div (click)="displayGearItem(item)" style="background-color: lightgrey;" class="row">
               <div style="background-color: lightgrey;" class="col-xs-8">
-                <div
-                  style="background-color:white; margin: 3px"
-                  id="panels"
-                  class="panel panel"
-                >
+                <div style="background-color:white; margin: 3px" id="panels" class="panel panel">
                   <div class="panel-heading">
                     <div class="panel-title">
                       <div class="row">
@@ -262,25 +173,16 @@
                     <div class="panel-body">
                       <div class="row"></div>
                       <div class="col-xs-2">
-                        <img
-                          style="max-width:100px; height: auto;"
-                          class="img-responsive"
-                          src="{{ item.imageUrl }}"
-                        />
+                        <img style="max-width:100px; height: auto;" class="img-responsive" src="{{ item.imageUrl }}" />
                       </div>
                       <div class="col-xs-4">
-                        <h4
-                          style="margin-top:  -5px; text-decoration-line: none;"
-                          class="product-name"
-                        >
+                        <h4 style="margin-top:  -5px; text-decoration-line: none;" class="product-name">
                           <strong>{{ item.name | titlecase }}</strong>
                         </h4>
                         <h4 style="text-decoration-line: none;">
                           <small>{{ item.description | titlecase }}</small>
                         </h4>
-                        <h4
-                          style="margin-top:  -10px; text-decoration-line: none;"
-                        >
+                        <h4 style="margin-top:  -10px; text-decoration-line: none;">
                           <small>{{ item.price | currency }}/ day</small>
                         </h4>
                       </div>
@@ -298,18 +200,9 @@
                             <h6 style="margin-left: -5px;">
                               Lender Rating: {{ item.user.userLenderRating }}
                             </h6>
-                            <ngb-rating
-                              [(rate)]="item.user.userLenderRating"
-                              [readonly]="true"
-                              max="5"
-                            >
+                            <ngb-rating [(rate)]="item.user.userLenderRating" [readonly]="true" max="5">
                               <ng-template let-fill="fill" let-index="index">
-                                <span
-                                  class="star"
-                                  [class.filled]="fill === 100"
-                                  [class.bad]="index < 0"
-                                  >&#9733;</span
-                                >
+                                <span class="star" [class.filled]="fill === 100" [class.bad]="index < 0">&#9733;</span>
                               </ng-template>
                             </ngb-rating>
                           </div>
@@ -326,36 +219,23 @@
         <!-- RESERVATION PAGE -->
         <div *ngIf="selected">
           <div class="list-group">
-            <div
-              *ngIf="this.selected && this.selected.id && this.selected.id > 0"
-            >
-              <div
-                style="align-items: center; align-content: center; align-self: auto;"
-              >
+            <div *ngIf="this.selected && this.selected.id && this.selected.id > 0">
+              <div style="align-items: center; align-content: center; align-self: auto;">
                 <h2 style="margin-left: 800px">
                   {{ selected.name | titlecase }}
                 </h2>
 
                 <div class="row">
                   <div class="column">
-                    <div
-                      style="max-width:600px; max-height:500px !important; padding: 10px; overflow: hidden;"
-                    >
-                      <img
-                        class="resImage"
-                        src="{{ selected.imageUrl }}"
-                        alt=""
-                      />
+                    <div style="max-width:600px; max-height:500px !important; padding: 10px; overflow: hidden;">
+                      <img class="resImage" src="{{ selected.imageUrl }}" alt="" />
                     </div>
                   </div>
 
                   <!-- RIGHT SIDE - DETAILS  -->
                   <div class="column">
                     <div class="right">
-                      <li
-                        class="list-group"
-                        *ngIf="this.selected && this.selected.description"
-                      >
+                      <li class="list-group" *ngIf="this.selected && this.selected.description">
                         Description:
                         {{ selected.description | lowercase }}
                       </li>
@@ -365,16 +245,10 @@
                       <li class="list-group ">
                         Condition: {{ selected.gearCondition | lowercase }}
                       </li>
-                      <li
-                        class="list-group "
-                        *ngIf="selected.available == true"
-                      >
+                      <li class="list-group " *ngIf="selected.available == true">
                         Available: Yes!
                       </li>
-                      <li
-                        class="list-group "
-                        *ngIf="selected.available == false"
-                      >
+                      <li class="list-group " *ngIf="selected.available == false">
                         Available: Sorry, it is not available to rent at this
                         time.
                       </li>
@@ -389,32 +263,14 @@
                         {{ selected.user.address.postalCode }}
                       </li>
 
-                      <div
-                        class="btn-group"
-                        role="group"
-                        aria-label="Basic example"
-                      >
-                        <div
-                          class="btn-group"
-                          role="group"
-                          aria-label="Basic example"
-                        >
-                          <button
-                            (click)="startReservation()"
-                            class="btn btn-dark my-2 my-sm-0"
-                          >
+                      <div class="btn-group" role="group" aria-label="Basic example">
+                        <div class="btn-group" role="group" aria-label="Basic example">
+                          <button (click)="startReservation()" class="btn btn-dark my-2 my-sm-0">
                             Make a Reservation
                           </button>
                         </div>
-                        <div
-                          class="btn-group"
-                          role="group"
-                          aria-label="Basic example"
-                        >
-                          <button
-                            (click)="ngOnInit()"
-                            class="btn btn-warning my-2 my-sm-0"
-                          >
+                        <div class="btn-group" role="group" aria-label="Basic example">
+                          <button (click)="ngOnInit()" class="btn btn-warning my-2 my-sm-0">
                             Back to the list
                           </button>
                         </div>
@@ -425,24 +281,16 @@
               </div>
 
               <!-- Reviews of gear if user is logged in and item has reviews -->
-              <div
-                class="container"
-                *ngIf="selectedGearReviews && selectedGearReviews.length > 0"
-              >
+              <div class="container" *ngIf="selectedGearReviews && selectedGearReviews.length > 0">
                 <div class="row">
                   <div class="col-md-8">
                     <div class="page-header">
                       <h1>
-                        <small class="pull-right"
-                          >{{ selectedGearReviews.length }} Review(s)</small
-                        >
+                        <small class="pull-right">{{ selectedGearReviews.length }} Review(s)</small>
                         Comments
                       </h1>
                     </div>
-                    <div
-                      class="comments-list"
-                      *ngFor="let review of selectedGearReviews"
-                    >
+                    <div class="comments-list" *ngFor="let review of selectedGearReviews">
                       <div class="media">
                         <a class="media-left" href="#">
                           <!-- <img src="{{review.reservation.userShopper.imageUrl}}"> -->
@@ -454,18 +302,10 @@
                           {{ review.review }}
                           <p style="margin-right: 10px" class="pull-right">
                             <small>
-                              <ngb-rating
-                                [(rate)]="review.rating"
-                                [readonly]="true"
-                                max="5"
-                              >
+                              <ngb-rating [(rate)]="review.rating" [readonly]="true" max="5">
                                 <ng-template let-fill="fill" let-index="index">
-                                  <span
-                                    class="star"
-                                    [class.filled]="fill === 100"
-                                    [class.bad]="index < 0"
-                                    >&#9733;</span
-                                  >
+                                  <span class="star" [class.filled]="fill === 100"
+                                    [class.bad]="index < 0">&#9733;</span>
                                 </ng-template>
                               </ngb-rating>
                             </small>
