admin review html loaded. Need to work on the logic

--- a/ngGearSilo/src/app/components/admin/admin.component.css
+++ b/ngGearSilo/src/app/components/admin/admin.component.css
@@ -22,3 +22,8 @@ a:hover {
 a:active {
   color: rgb(245, 6, 6);
 }
+
+.img-thumbnail {
+  min-height: 50px !important;
+  max-height: 450px !important;
+}
