--- a/ngGearSilo/src/app/components/nav-bar/nav-bar.component.css
+++ b/ngGearSilo/src/app/components/nav-bar/nav-bar.component.css
@@ -18,8 +18,12 @@
 .navbar {
   font-family: Arial, Helvetica, sans-serif !important;
    margin: 0px !important;
-   font-size: 20px !important;
-   font-stretch: 3px !important;
+   font-size: 17px !important;
+   /* font-stretch: 3px !important; */
    border-radius: 0 !important;
 
+}
+
+.nb-txt {
+  font-size: 25px !important;
 }
