--- a/ngGearSilo/src/app/components/gear-list/gear-list.component.css
+++ b/ngGearSilo/src/app/components/gear-list/gear-list.component.css
@@ -294,7 +294,7 @@ h4 {
   height: 30px;
   border-radius: 50%;
   /* background: orange; */
-  cursor: pointer;
+  cursor: -webkit-grab;
 }
 
 .slider::-webkit-slider-thumb:hover {
@@ -305,7 +305,7 @@ h4 {
   width: 30px;
   height: 30px;
   /* background: orange; */
-  cursor: pointer;
+  cursor: ew-resize;
 }
 
 .slider::-moz-range-thumb:hover {
