cleaned up gear-list cards where it doesn't blur during transition to larger size

--- a/ngGearSilo/src/app/components/gear-list/gear-list.component.css
+++ b/ngGearSilo/src/app/components/gear-list/gear-list.component.css
@@ -49,8 +49,8 @@
 
 #panels:hover {
   background-color: white;
-  transition: transform 0.4s;
-  transition-delay: 0.1s;
+  /* transition: transform 0.1s; */
+  /* transition-delay: 0.1s; */
   transform: scale(1.01);
   transform-style: preserve-3d;
 }
