--- a/ngGearSilo/src/app/components/reservation/reservation.component.css
+++ b/ngGearSilo/src/app/components/reservation/reservation.component.css
@@ -2,6 +2,13 @@
   color: rgb(255, 0, 0);
 }
 
+.contaner {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.btn {
+  font-family: Arial, Helvetica, sans-serif;
+}
 /* Create two equal columns that floats next to each other */
 .column {
   float: left;
