--- a/ngGearSilo/src/app/components/login/login.component.css
+++ b/ngGearSilo/src/app/components/login/login.component.css
@@ -21,3 +21,14 @@
 .red-text {
   color: rgb(255, 0, 0);
 }
+
+.ard-body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+.btn {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.etc-login-form {
+  font-family: Arial, Helvetica, sans-serif;
+}
