added lender picture to reservation page

--- a/ngGearSilo/src/app/components/reservation/reservation.component.html
+++ b/ngGearSilo/src/app/components/reservation/reservation.component.html
@@ -44,7 +44,8 @@
                   </h4> <a
                     href="mailto:{{selected.user.email}}?subject=Gear Silo Rental Inquiry!&body=Hi, {{selected.user.firstName}}! I would like to rent your {{selected.name}}. Please confirm the requested reserve dates.">
                     <span style="margin-right: 5px; font-size: 30px; color: orange"
-                      class="glyphicon glyphicon-envelope"></span></a>
+                      class="glyphicon glyphicon-envelope"></span> <img class="pic"
+                      src="{{ selected.user.imageUrl }}" /></a>
                 </li>
 
                 <br>
