added top of page button on gearlist to help the user scroll back to the top

--- a/ngGearSilo/src/app/components/gear-list/gear-list.component.html
+++ b/ngGearSilo/src/app/components/gear-list/gear-list.component.html
@@ -322,8 +322,9 @@
             </div>
           </div>
         </div>
-        <div class="col-1"></div>
+        <div class="topOfPage">
+          <button style="background-attachment: local;" class="btn btn-outline-secondary" (click)="topOfPage()">Top of Page</button>
+        </div>
       </div>
     </div>
   </div>
-</div>
