--- a/ngGearSilo/src/app/components/nav-bar/nav-bar.component.html
+++ b/ngGearSilo/src/app/components/nav-bar/nav-bar.component.html
@@ -1,5 +1,5 @@
 <nav id="nav" class="navbar navbar-expand-sm navbar-dark bg-secondary sticky">
-  <a class="navbar-brand nb-txt" href="#">GearSilo</a>
+  <a class="navbar-brand nb-txt" href="#"><span class="glyphicon glyphicon-cog"></span>Gear<span style="color: orange">Silo</span></a>
   <button
     class="navbar-toggler navbar-toggler-right sticky"
     type="button"
